# wikipy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/wikipy/: console.py
tests/: test_console.py
