[tool.poetry]
name = "wikipy"
version = "0.1.0"
description = "wikipy project"
authors = ["Zurda <m.weizman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zurda/wikipy"
repository = "https://github.com/zurda/wikipy"
keywords = ["wikipy"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
