[tool.poetry]
name = "wikipy"
version = "0.1.0"
description = "wikipy project"
authors = ["Zurda <m.weizman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zurda/wikipy"
repository = "https://github.com/zurda/wikipy"
keywords = ["wikipy"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wikipy = "wikipy.console:main"

[tool.coverage.run]
omit = ["*/tests*"]